--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -243,3 +243,69 @@ a {
 @media screen and (max-width: 42em) {
   .site-footer {
     font-size: 0.9rem; } }
+    body {
+ background-color: green;
+ background-image: url('../images/color-boats-16724.jpg');
+ background-attachment: fixed;
+ background-repeat: no-repeat;
+ background-position: top left;
+ color: #0fff0f;
+}
+ span {
+ color: red;
+}
+ .foo {
+ color: rgb(230, 230, 230);
+}
+ h1, .foo, div {
+ font-size: 30px;
+}
+ #bar {
+ color: #ffffff
+}
+
+ h3 {
+ text-decoration: line-through overline underline;
+ font-style: italic;
+}
+ h1 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 3px black inset;
+    padding-top: 10px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-left: 210px;
+}
+ 
+h2 {
+    background-color: #777777;
+    border: 3px red double;
+    padding: 10px 0 10px 300px;
+    margin: 10px 10px 0 10px;
+}
+ h3 {
+    padding: 0;
+    margin: 0;
+}
+ div > p {
+    color: red;
+}
+ h1:hover {
+    text-decoration: underline;
+}
+ .select {
+    text-align: center;
+ }
+ #selectid {
+    width: 100px;
+    height: 30px;
+    border-style: outset;
+    border-radius: 50px;
+    margin-left: 47%;
+ }
+ a>img {
+    border: 2px solid black;
+    border-radius: 40px;
+
+ }
