--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -304,8 +304,9 @@ h2 {
     border-radius: 50px;
     margin-left: 47%;
  }
- a>img {
+ @media screen and (min-width: 42em) and (max-width: 64em) { a>img {
     border: 2px solid black;
     border-radius: 40px;
 
  }
+}
