--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -265,7 +265,7 @@ a {
 }
 
  h3 {
- text-decoration: line-through overline underline;
+ text-decoration: underline;
  font-style: italic;
 }
  h1 {
