--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -304,7 +304,8 @@ h2 {
     border-radius: 50px;
     margin-left: 47%;
  }
- @media screen and (min-width: 42em) and (max-width: 64em) { a>img {
+ @media screen and (min-width: 42em) and (max-width: 64em) {
+  .mywork {
     border: 2px solid black;
     border-radius: 40px;
 
